--- a/server/package.json
+++ b/server/package.json
@@ -1,51 +1,30 @@
 {
   "name": "almutanabbi-server",
-  "version": "1.0.0",
-  "description": "Backend server for Al-Mutanabbi Iraqi bookstore marketplace",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js"
+  "uuid": "d07a7ecc-27bf-41ce-af96-cca240713cb7",
+  "lastMigration": 33,
+  "endpointPrefix": "",
+  "latency": 0,
+  "port": 3000,
+  "hostname": "",
+  "rootChildren": [],
+  "folders": [],
+  "routes": [],
+  "proxyMode": false,
+  "proxyHost": "",
+  "proxyRemovePrefix": false,
+  "tlsOptions": {
+    "enabled": false,
+    "type": "CERT",
+    "pfxPath": "",
+    "certPath": "",
+    "keyPath": "",
+    "caPath": "",
+    "passphrase": ""
   },
-  "keywords": [
-    "bookstore",
-    "marketplace",
-    "iraqi",
-    "arabic",
-    "books"
-  ],
-  "author": "Al-Mutanabbi Team",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.12.2",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "exceljs": "^4.4.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.2.1",
-    "helmet": "^7.1.0",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.1",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "redis": "^4.7.1",
-    "sequelize": "^6.35.0",
-    "sharp": "^0.32.6",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "cors": true,
+  "headers": [],
+  "proxyReqHeaders": [],
+  "proxyResHeaders": [],
+  "data": [],
+  "callbacks": []
 }
